Fix layout issues on small window size

--- a/qt_quick_app/styles.css
+++ b/qt_quick_app/styles.css
@@ -13,6 +13,10 @@ body {
     height: 100%;
 }
 
+.highcharts-container {
+    position: static !important; /* prevent shadow rendering bug in webkit */
+}
+
 .app {
     height: 100%;
     display: -webkit-flex;
@@ -48,7 +52,7 @@ body {
     cursor: default;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 1200px) {
   .wrapper {
       display: -webkit-flex;
       -webkit-flex-flow: row wrap;
@@ -59,7 +63,7 @@ body {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1200px) {
   .wrapper {
       display: -webkit-flex;
       -webkit-flex-flow: column wrap;
@@ -166,7 +170,8 @@ body {
 #settings-drawer-wrapper {
     background-color: white;
     height: 100%;
-    max-width: 15%;
+    width: 15%;
+    min-width: 180px;
     position: fixed;
     right: 0;
     top: 0;
@@ -444,16 +449,15 @@ body {
 }
 
 .progress-bar-wrapper {
+    -webkit-flex: 0 0 auto;
     text-align: center;
     padding: 0;
     margin: 0;
-    text-align: center;
     width: 100%;
     padding-bottom: 1em;
     padding-top: 1em;
     border-bottom: 1px solid silver;
     box-shadow: 0 1px 2px 0 silver;
-    position: relative;
 }
 
 .home {
